kubernetes/frontendproxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-proxy
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb # means this ingress file should be read only by the Alb controller.
  rules:
      # host based routing and update DNS record with name and loadbalancer IP (Ex: Godaddy / Route53)
    - host: opentelemetry.rjinfo.co.uk
      http:
        # path based routing
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: opentelemetry-demo-frontendproxy
                port:
                  number: 8080
